# PlantPal

./: .env.example  .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml  seed.py
backend/app/: db.py  main.py  models.py
backend/app/routers/: plants.py
backend/app/services/: care_events.py  plants.py
backend/tests/: conftest.py  test_all_endpoints.py  test_plants.py  test_smoke.py
frontend/: cached_api.py  care_log.py  plant_api.py  plantpal_ui.py  requirements.txt  theme.css
frontend/tests/: test_frontend.py
